update: modify .gitignore  (+1 more)

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,8 @@
 !/*.md
 
 # Allow directories and their contents  
-# Note: platforms/ excluded for tooling deployment (deployed separately to platform-specific repos)
-# !/platforms/
-# !/platforms/**
+!/platforms/
+!/platforms/**
 !/shared/
 !/shared/**
 !/tools/
